kompilator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> DECLARE declarations IN commands END
Rule 2     declarations -> declarations pidentifier SEMI
Rule 3     declarations -> declarations pidentifier LPAREN num COLON num RPAREN SEMI
Rule 4     declarations -> <empty>
Rule 5     commands -> commands command
Rule 6     commands -> command
Rule 7     command -> identifier ASSIGN expression SEMI
Rule 8     command -> IF condition THEN commands ELSE commands ENDIF
Rule 9     command -> IF condition THEN commands ENDIF
Rule 10    command -> WHILE condition DO commands ENDWHILE
Rule 11    command -> DO commands WHILE condition ENDDO
Rule 12    command -> FOR pidentifier FROM value TO value DO commands ENDFOR
Rule 13    command -> FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
Rule 14    command -> READ identifier SEMI
Rule 15    command -> WRITE value SEMI
Rule 16    expression -> value
Rule 17    expression -> value PLUS value
Rule 18    expression -> value MINUS value
Rule 19    expression -> value TIMES value
Rule 20    expression -> value DIVIDE value
Rule 21    expression -> value MODULO value
Rule 22    condition -> value EQ value
Rule 23    condition -> value NEQ value
Rule 24    condition -> value LT value
Rule 25    condition -> value GT value
Rule 26    condition -> value LEQ value
Rule 27    condition -> value GEQ value
Rule 28    value -> num
Rule 29    value -> identifier
Rule 30    identifier -> pidentifier
Rule 31    identifier -> pidentifier LPAREN pidentifier RPAREN
Rule 32    identifier -> pidentifier LPAREN num RPAREN

Terminals, with rules where they appear

ASSIGN               : 7
COLON                : 3
DECLARE              : 1
DIVIDE               : 20
DO                   : 10 11 12 13
DOWNTO               : 13
ELSE                 : 8
END                  : 1
ENDDO                : 11
ENDFOR               : 12 13
ENDIF                : 8 9
ENDWHILE             : 10
EQ                   : 22
FOR                  : 12 13
FROM                 : 12 13
GEQ                  : 27
GT                   : 25
IF                   : 8 9
IN                   : 1
LEQ                  : 26
LPAREN               : 3 31 32
LT                   : 24
MINUS                : 18
MODULO               : 21
NEQ                  : 23
PLUS                 : 17
READ                 : 14
RPAREN               : 3 31 32
SEMI                 : 2 3 7 14 15
THEN                 : 8 9
TIMES                : 19
TO                   : 12
WHILE                : 10 11
WRITE                : 15
error                : 
num                  : 3 3 28 32
pidentifier          : 2 3 12 13 30 31 31 32

Nonterminals, with rules where they appear

command              : 5 6
commands             : 1 5 8 8 9 10 11 12 13
condition            : 8 9 10 11
declarations         : 1 2 3
expression           : 7
identifier           : 7 14 29
program              : 0
value                : 12 12 13 13 15 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . DECLARE declarations IN commands END

    DECLARE         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> DECLARE . declarations IN commands END
    (2) declarations -> . declarations pidentifier SEMI
    (3) declarations -> . declarations pidentifier LPAREN num COLON num RPAREN SEMI
    (4) declarations -> .

    IN              reduce using rule 4 (declarations -> .)
    pidentifier     reduce using rule 4 (declarations -> .)

    declarations                   shift and go to state 3

state 3

    (1) program -> DECLARE declarations . IN commands END
    (2) declarations -> declarations . pidentifier SEMI
    (3) declarations -> declarations . pidentifier LPAREN num COLON num RPAREN SEMI

    IN              shift and go to state 4
    pidentifier     shift and go to state 5


state 4

    (1) program -> DECLARE declarations IN . commands END
    (5) commands -> . commands command
    (6) commands -> . command
    (7) command -> . identifier ASSIGN expression SEMI
    (8) command -> . IF condition THEN commands ELSE commands ENDIF
    (9) command -> . IF condition THEN commands ENDIF
    (10) command -> . WHILE condition DO commands ENDWHILE
    (11) command -> . DO commands WHILE condition ENDDO
    (12) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (14) command -> . READ identifier SEMI
    (15) command -> . WRITE value SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 6
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 5

    (2) declarations -> declarations pidentifier . SEMI
    (3) declarations -> declarations pidentifier . LPAREN num COLON num RPAREN SEMI

    SEMI            shift and go to state 16
    LPAREN          shift and go to state 17


state 6

    (1) program -> DECLARE declarations IN commands . END
    (5) commands -> commands . command
    (7) command -> . identifier ASSIGN expression SEMI
    (8) command -> . IF condition THEN commands ELSE commands ENDIF
    (9) command -> . IF condition THEN commands ENDIF
    (10) command -> . WHILE condition DO commands ENDWHILE
    (11) command -> . DO commands WHILE condition ENDDO
    (12) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (14) command -> . READ identifier SEMI
    (15) command -> . WRITE value SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    END             shift and go to state 18
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    command                        shift and go to state 19
    identifier                     shift and go to state 8

state 7

    (6) commands -> command .

    END             reduce using rule 6 (commands -> command .)
    IF              reduce using rule 6 (commands -> command .)
    WHILE           reduce using rule 6 (commands -> command .)
    DO              reduce using rule 6 (commands -> command .)
    FOR             reduce using rule 6 (commands -> command .)
    READ            reduce using rule 6 (commands -> command .)
    WRITE           reduce using rule 6 (commands -> command .)
    pidentifier     reduce using rule 6 (commands -> command .)
    ELSE            reduce using rule 6 (commands -> command .)
    ENDIF           reduce using rule 6 (commands -> command .)
    ENDWHILE        reduce using rule 6 (commands -> command .)
    ENDFOR          reduce using rule 6 (commands -> command .)


state 8

    (7) command -> identifier . ASSIGN expression SEMI

    ASSIGN          shift and go to state 20


state 9

    (8) command -> IF . condition THEN commands ELSE commands ENDIF
    (9) command -> IF . condition THEN commands ENDIF
    (22) condition -> . value EQ value
    (23) condition -> . value NEQ value
    (24) condition -> . value LT value
    (25) condition -> . value GT value
    (26) condition -> . value LEQ value
    (27) condition -> . value GEQ value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    condition                      shift and go to state 21
    value                          shift and go to state 22
    identifier                     shift and go to state 24

state 10

    (10) command -> WHILE . condition DO commands ENDWHILE
    (22) condition -> . value EQ value
    (23) condition -> . value NEQ value
    (24) condition -> . value LT value
    (25) condition -> . value GT value
    (26) condition -> . value LEQ value
    (27) condition -> . value GEQ value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    condition                      shift and go to state 25
    value                          shift and go to state 22
    identifier                     shift and go to state 24

state 11

    (11) command -> DO . commands WHILE condition ENDDO
    (5) commands -> . commands command
    (6) commands -> . command
    (7) command -> . identifier ASSIGN expression SEMI
    (8) command -> . IF condition THEN commands ELSE commands ENDIF
    (9) command -> . IF condition THEN commands ENDIF
    (10) command -> . WHILE condition DO commands ENDWHILE
    (11) command -> . DO commands WHILE condition ENDDO
    (12) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (14) command -> . READ identifier SEMI
    (15) command -> . WRITE value SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 26
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 12

    (12) command -> FOR . pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> FOR . pidentifier FROM value DOWNTO value DO commands ENDFOR

    pidentifier     shift and go to state 27


state 13

    (30) identifier -> pidentifier .
    (31) identifier -> pidentifier . LPAREN pidentifier RPAREN
    (32) identifier -> pidentifier . LPAREN num RPAREN

    ASSIGN          reduce using rule 30 (identifier -> pidentifier .)
    EQ              reduce using rule 30 (identifier -> pidentifier .)
    NEQ             reduce using rule 30 (identifier -> pidentifier .)
    LT              reduce using rule 30 (identifier -> pidentifier .)
    GT              reduce using rule 30 (identifier -> pidentifier .)
    LEQ             reduce using rule 30 (identifier -> pidentifier .)
    GEQ             reduce using rule 30 (identifier -> pidentifier .)
    SEMI            reduce using rule 30 (identifier -> pidentifier .)
    PLUS            reduce using rule 30 (identifier -> pidentifier .)
    MINUS           reduce using rule 30 (identifier -> pidentifier .)
    TIMES           reduce using rule 30 (identifier -> pidentifier .)
    DIVIDE          reduce using rule 30 (identifier -> pidentifier .)
    MODULO          reduce using rule 30 (identifier -> pidentifier .)
    THEN            reduce using rule 30 (identifier -> pidentifier .)
    DO              reduce using rule 30 (identifier -> pidentifier .)
    ENDDO           reduce using rule 30 (identifier -> pidentifier .)
    TO              reduce using rule 30 (identifier -> pidentifier .)
    DOWNTO          reduce using rule 30 (identifier -> pidentifier .)
    LPAREN          shift and go to state 28


state 14

    (14) command -> READ . identifier SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    pidentifier     shift and go to state 13

    identifier                     shift and go to state 29

state 15

    (15) command -> WRITE . value SEMI
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 30
    identifier                     shift and go to state 24

state 16

    (2) declarations -> declarations pidentifier SEMI .

    IN              reduce using rule 2 (declarations -> declarations pidentifier SEMI .)
    pidentifier     reduce using rule 2 (declarations -> declarations pidentifier SEMI .)


state 17

    (3) declarations -> declarations pidentifier LPAREN . num COLON num RPAREN SEMI

    num             shift and go to state 31


state 18

    (1) program -> DECLARE declarations IN commands END .

    $end            reduce using rule 1 (program -> DECLARE declarations IN commands END .)


state 19

    (5) commands -> commands command .

    END             reduce using rule 5 (commands -> commands command .)
    IF              reduce using rule 5 (commands -> commands command .)
    WHILE           reduce using rule 5 (commands -> commands command .)
    DO              reduce using rule 5 (commands -> commands command .)
    FOR             reduce using rule 5 (commands -> commands command .)
    READ            reduce using rule 5 (commands -> commands command .)
    WRITE           reduce using rule 5 (commands -> commands command .)
    pidentifier     reduce using rule 5 (commands -> commands command .)
    ELSE            reduce using rule 5 (commands -> commands command .)
    ENDIF           reduce using rule 5 (commands -> commands command .)
    ENDWHILE        reduce using rule 5 (commands -> commands command .)
    ENDFOR          reduce using rule 5 (commands -> commands command .)


state 20

    (7) command -> identifier ASSIGN . expression SEMI
    (16) expression -> . value
    (17) expression -> . value PLUS value
    (18) expression -> . value MINUS value
    (19) expression -> . value TIMES value
    (20) expression -> . value DIVIDE value
    (21) expression -> . value MODULO value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    identifier                     shift and go to state 24
    expression                     shift and go to state 32
    value                          shift and go to state 33

state 21

    (8) command -> IF condition . THEN commands ELSE commands ENDIF
    (9) command -> IF condition . THEN commands ENDIF

    THEN            shift and go to state 34


state 22

    (22) condition -> value . EQ value
    (23) condition -> value . NEQ value
    (24) condition -> value . LT value
    (25) condition -> value . GT value
    (26) condition -> value . LEQ value
    (27) condition -> value . GEQ value

    EQ              shift and go to state 35
    NEQ             shift and go to state 36
    LT              shift and go to state 37
    GT              shift and go to state 38
    LEQ             shift and go to state 39
    GEQ             shift and go to state 40


state 23

    (28) value -> num .

    EQ              reduce using rule 28 (value -> num .)
    NEQ             reduce using rule 28 (value -> num .)
    LT              reduce using rule 28 (value -> num .)
    GT              reduce using rule 28 (value -> num .)
    LEQ             reduce using rule 28 (value -> num .)
    GEQ             reduce using rule 28 (value -> num .)
    SEMI            reduce using rule 28 (value -> num .)
    PLUS            reduce using rule 28 (value -> num .)
    MINUS           reduce using rule 28 (value -> num .)
    TIMES           reduce using rule 28 (value -> num .)
    DIVIDE          reduce using rule 28 (value -> num .)
    MODULO          reduce using rule 28 (value -> num .)
    THEN            reduce using rule 28 (value -> num .)
    DO              reduce using rule 28 (value -> num .)
    ENDDO           reduce using rule 28 (value -> num .)
    TO              reduce using rule 28 (value -> num .)
    DOWNTO          reduce using rule 28 (value -> num .)


state 24

    (29) value -> identifier .

    EQ              reduce using rule 29 (value -> identifier .)
    NEQ             reduce using rule 29 (value -> identifier .)
    LT              reduce using rule 29 (value -> identifier .)
    GT              reduce using rule 29 (value -> identifier .)
    LEQ             reduce using rule 29 (value -> identifier .)
    GEQ             reduce using rule 29 (value -> identifier .)
    SEMI            reduce using rule 29 (value -> identifier .)
    PLUS            reduce using rule 29 (value -> identifier .)
    MINUS           reduce using rule 29 (value -> identifier .)
    TIMES           reduce using rule 29 (value -> identifier .)
    DIVIDE          reduce using rule 29 (value -> identifier .)
    MODULO          reduce using rule 29 (value -> identifier .)
    THEN            reduce using rule 29 (value -> identifier .)
    DO              reduce using rule 29 (value -> identifier .)
    ENDDO           reduce using rule 29 (value -> identifier .)
    TO              reduce using rule 29 (value -> identifier .)
    DOWNTO          reduce using rule 29 (value -> identifier .)


state 25

    (10) command -> WHILE condition . DO commands ENDWHILE

    DO              shift and go to state 41


state 26

    (11) command -> DO commands . WHILE condition ENDDO
    (5) commands -> commands . command
    (7) command -> . identifier ASSIGN expression SEMI
    (8) command -> . IF condition THEN commands ELSE commands ENDIF
    (9) command -> . IF condition THEN commands ENDIF
    (10) command -> . WHILE condition DO commands ENDWHILE
    (11) command -> . DO commands WHILE condition ENDDO
    (12) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (14) command -> . READ identifier SEMI
    (15) command -> . WRITE value SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    WHILE           shift and go to state 42
    IF              shift and go to state 9
    DO              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    command                        shift and go to state 19
    identifier                     shift and go to state 8

state 27

    (12) command -> FOR pidentifier . FROM value TO value DO commands ENDFOR
    (13) command -> FOR pidentifier . FROM value DOWNTO value DO commands ENDFOR

    FROM            shift and go to state 43


state 28

    (31) identifier -> pidentifier LPAREN . pidentifier RPAREN
    (32) identifier -> pidentifier LPAREN . num RPAREN

    pidentifier     shift and go to state 44
    num             shift and go to state 45


state 29

    (14) command -> READ identifier . SEMI

    SEMI            shift and go to state 46


state 30

    (15) command -> WRITE value . SEMI

    SEMI            shift and go to state 47


state 31

    (3) declarations -> declarations pidentifier LPAREN num . COLON num RPAREN SEMI

    COLON           shift and go to state 48


state 32

    (7) command -> identifier ASSIGN expression . SEMI

    SEMI            shift and go to state 49


state 33

    (16) expression -> value .
    (17) expression -> value . PLUS value
    (18) expression -> value . MINUS value
    (19) expression -> value . TIMES value
    (20) expression -> value . DIVIDE value
    (21) expression -> value . MODULO value

    SEMI            reduce using rule 16 (expression -> value .)
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    MODULO          shift and go to state 54


state 34

    (8) command -> IF condition THEN . commands ELSE commands ENDIF
    (9) command -> IF condition THEN . commands ENDIF
    (5) commands -> . commands command
    (6) commands -> . command
    (7) command -> . identifier ASSIGN expression SEMI
    (8) command -> . IF condition THEN commands ELSE commands ENDIF
    (9) command -> . IF condition THEN commands ENDIF
    (10) command -> . WHILE condition DO commands ENDWHILE
    (11) command -> . DO commands WHILE condition ENDDO
    (12) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (14) command -> . READ identifier SEMI
    (15) command -> . WRITE value SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 55
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 35

    (22) condition -> value EQ . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 56
    identifier                     shift and go to state 24

state 36

    (23) condition -> value NEQ . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 57
    identifier                     shift and go to state 24

state 37

    (24) condition -> value LT . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 58
    identifier                     shift and go to state 24

state 38

    (25) condition -> value GT . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 59
    identifier                     shift and go to state 24

state 39

    (26) condition -> value LEQ . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 60
    identifier                     shift and go to state 24

state 40

    (27) condition -> value GEQ . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 61
    identifier                     shift and go to state 24

state 41

    (10) command -> WHILE condition DO . commands ENDWHILE
    (5) commands -> . commands command
    (6) commands -> . command
    (7) command -> . identifier ASSIGN expression SEMI
    (8) command -> . IF condition THEN commands ELSE commands ENDIF
    (9) command -> . IF condition THEN commands ENDIF
    (10) command -> . WHILE condition DO commands ENDWHILE
    (11) command -> . DO commands WHILE condition ENDDO
    (12) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (13) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (14) command -> . READ identifier SEMI
    (15) command -> . WRITE value SEMI
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 62
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 42

    (11) command -> DO commands WHILE . condition ENDDO
    (10) command -> WHILE . condition DO commands ENDWHILE
    (22) condition -> . value EQ value
    (23) condition -> . value NEQ value
    (24) condition -> . value LT value
    (25) condition -> . value GT value
    (26) condition -> . value LEQ value
    (27) condition -> . value GEQ value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    condition                      shift and go to state 63
    value                          shift and go to state 22
    identifier                     shift and go to state 24

state 43

    (12) command -> FOR pidentifier FROM . value TO value DO commands ENDFOR
    (13) command -> FOR pidentifier FROM . value DOWNTO value DO commands ENDFOR
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 64
    identifier                     shift and go to state 24

state 44

    (31) identifier -> pidentifier LPAREN pidentifier . RPAREN

    RPAREN          shift and go to state 65


state 45

    (32) identifier -> pidentifier LPAREN num . RPAREN

    RPAREN          shift and go to state 66


state 46

    (14) command -> READ identifier SEMI .

    END             reduce using rule 14 (command -> READ identifier SEMI .)
    IF              reduce using rule 14 (command -> READ identifier SEMI .)
    WHILE           reduce using rule 14 (command -> READ identifier SEMI .)
    DO              reduce using rule 14 (command -> READ identifier SEMI .)
    FOR             reduce using rule 14 (command -> READ identifier SEMI .)
    READ            reduce using rule 14 (command -> READ identifier SEMI .)
    WRITE           reduce using rule 14 (command -> READ identifier SEMI .)
    pidentifier     reduce using rule 14 (command -> READ identifier SEMI .)
    ELSE            reduce using rule 14 (command -> READ identifier SEMI .)
    ENDIF           reduce using rule 14 (command -> READ identifier SEMI .)
    ENDWHILE        reduce using rule 14 (command -> READ identifier SEMI .)
    ENDFOR          reduce using rule 14 (command -> READ identifier SEMI .)


state 47

    (15) command -> WRITE value SEMI .

    END             reduce using rule 15 (command -> WRITE value SEMI .)
    IF              reduce using rule 15 (command -> WRITE value SEMI .)
    WHILE           reduce using rule 15 (command -> WRITE value SEMI .)
    DO              reduce using rule 15 (command -> WRITE value SEMI .)
    FOR             reduce using rule 15 (command -> WRITE value SEMI .)
    READ            reduce using rule 15 (command -> WRITE value SEMI .)
    WRITE           reduce using rule 15 (command -> WRITE value SEMI .)
    pidentifier     reduce using rule 15 (command -> WRITE value SEMI .)
    ELSE            reduce using rule 15 (command -> WRITE value SEMI .)
    ENDIF           reduce using rule 15 (command -> WRITE value SEMI .)
    ENDWHILE        reduce using rule 15 (command -> WRITE value SEMI .)
    ENDFOR          reduce using rule 15 (command -> WRITE value SEMI .)


state 48

    (3) declarations -> declarations pidentifier LPAREN num COLON . num RPAREN SEMI

    num             shift and go to state 67


state 49

    (7) command -> identifier ASSIGN expression SEMI .

    END             reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    IF              reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    WHILE           reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    DO              reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    FOR             reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    READ            reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    WRITE           reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    pidentifier     reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    ELSE            reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    ENDIF           reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    ENDWHILE        reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)
    ENDFOR          reduce using rule 7 (command -> identifier ASSIGN expression SEMI .)


state 50

    (17) expression -> value PLUS . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 68
    identifier                     shift and go to state 24

state 51

    (18) expression -> value MINUS . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 69
    identifier                     shift and go to state 24

state 52

    (19) expression -> value TIMES . value
    (28) value -> . num
    (29) value -> . identifier
    (30) identifier -> . pidentifier
    (31) identifier -> . pidentifier LPAREN pidentifier RPAREN
    (32) identifier -> . pidentifier LPAREN num RPAREN

    num             shift and go to state 23
    pidentifier     shift and go to state 13

    value                          shift and go to state 70
    identifier                     shift and go to state 24

state 53
